# jkr-math

./: CMakeLists.txt  Doxyfile  README.md  jkr-math.sln
docs/: annotated.html  annotated_dup.js  classes.html  common_8hpp.html  common_8hpp.js  common_8hpp_source.html  dir_005406a44b961822e4107d54f1b4a2a6.html  dir_005406a44b961822e4107d54f1b4a2a6.js  dir_09e761304027c904456130627fd4dcf5.html  dir_9d8eacf5906826cac67f259531de62c1.html  dir_9d8eacf5906826cac67f259531de62c1.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  index.html  macro_8hpp.html  macro_8hpp.js  macro_8hpp_source.html  menudata.js  namespacejkr.html  namespacejkr.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  navtreeindex0.js  setup_8hpp.html  setup_8hpp.js  setup_8hpp_source.html  structjkr_1_1vec.html  structjkr_1_1vec_3_011_00_01_t_01_4-members.html  structjkr_1_1vec_3_011_00_01_t_01_4.html  structjkr_1_1vec_3_011_00_01_t_01_4.js  structjkr_1_1vec_3_013_00_01_t_01_4-members.html  (+17 more)
docs/html/: annotated_dup.js  classes.html  common_8hpp_source.html  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_9d8eacf5906826cac67f259531de62c1.html  dir_9d8eacf5906826cac67f259531de62c1.js  doxygen_crawl.html  functions_func.html  functions_type.html  globals_defs.html  index.html  macro_8hpp_source.html  namespacejkr.html  namespacejkr.js  namespacemembers.html  navtreedata.js  swizzle_8hpp_source.html  type__vec3_8hpp.html
docs/html/search/: all_12.js  all_b.js  all_c.js  classes_0.js  (+13 more)
docs/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  defines_1.js  files_3.js  functions_0.js  functions_1.js  namespaces_0.js  related_0.js  typedefs_1.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  variables_0.js
includes/jkr/: common.hpp  macro.hpp  setup.hpp  swizzle.hpp  type_vec3.hpp  type_vec3.inl
jkr-math/: jkr-math.vcxproj  jkr-math.vcxproj.filters
jkr-math/src/: main.cpp
test/: CMakeLists.txt  helper.hpp  main.cpp  test_vec1.cpp
(+10 files in other folders)
